--- a/source/extensions/clusters/reverse_connection/BUILD
+++ b/source/extensions/clusters/reverse_connection/BUILD
@@ -15,14 +15,13 @@ envoy_cc_extension(
     visibility = ["//visibility:public"],
     deps = [
         "//envoy/upstream:cluster_factory_interface",
+        "//source/common/formatter:formatter_extension_lib",
         "//source/common/http:header_utility_lib",
-        "//source/common/http/matching:data_impl_lib",
-        "//source/common/http/matching:inputs_lib",
-        "//source/common/matcher:matcher_lib",
         "//source/common/network:address_lib",
         "//source/common/upstream:cluster_factory_lib",
         "//source/common/upstream:upstream_includes",
         "//source/extensions/bootstrap/reverse_tunnel/upstream_socket_interface:reverse_tunnel_acceptor_lib",
+        "//source/extensions/formatter/cel:config",
         "//source/extensions/transport_sockets/raw_buffer:config",
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
         "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
