--- a/test/extensions/clusters/reverse_connection/BUILD
+++ b/test/extensions/clusters/reverse_connection/BUILD
@@ -22,8 +22,8 @@ envoy_cc_test(
         "//test/mocks/server:admin_mocks",
         "//test/mocks/server:instance_mocks",
         "//test/mocks/ssl:ssl_mocks",
-        "//test/mocks/upstream:cluster_manager_mocks",
         "//test/test_common:registry_lib",
+        "//test/test_common:threadsafe_singleton_injector_lib",
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/clusters/reverse_connection/v3:pkg_cc_proto",
