--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -17,6 +17,11 @@ bug_fixes:
     - CVE-2024-25178: luajit
     - CVE-2025-27817: kafka
     - CVE-2025-27818: kafka.
+- area: tls_inspector
+  change: |
+    Fixed regression in tls_inspector that caused plain text connections to be closed if more than 16Kb is read at once.
+    This behavior can be reverted by setting the runtime guard ``envoy.reloadable_features.tls_inspector_no_length_check_on_error``
+    to false.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
