tls_inspector: do not close plain text connections for >16Kb reads (#40911)
if Envoy read more than 16Kb in a single read operation. The bug was
always there, but before #39903 a single read of more than 64Kb was
needed which was much less likely (and recommended network buffer size is 32Kb).
See issue #40730

After #39903 Envoy gained ability to disconnect connections with TLS
client hello above 16Kb but made pre-existing bug
that caused valid plain text connections to be disconnected much more
likely.

This PR bring Envoy largely to the old behavior. Connections with TLS
client hello above 16Kb will be interpreted as plain text (as it was
before #39903). The only difference is that Envoy will not disconnect
connections with a single read of more than 64Kb, but this is too rare
to be a meaningful difference in behavior and is arguably more correct.

Risk Level: low (brings back old behavior)
Testing: unit tests
Docs Changes: n/a
Release Notes: yes
Platform Specific Features: n/a
Runtime guard:
envoy.reloadable_features.tls_inspector_no_length_check_on_error
Fixes #40730

---------

Signed-off-by: Yan Avlasov <yavlasov@google.com>
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -19,6 +19,11 @@ bug_fixes:
     - CVE-2025-27818: kafka
     - CVE-2024-51745: wasmtime
     - CVE-2025-53901: wasmtime.
+- area: tls_inspector
+  change: |
+    Fixed regression in tls_inspector that caused plain text connections to be closed if more than 16Kb is read at once.
+    This behavior can be reverted by setting the runtime guard ``envoy.reloadable_features.tls_inspector_no_length_check_on_error``
+    to false.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
