--- a/test/extensions/clusters/reverse_connection/BUILD
+++ b/test/extensions/clusters/reverse_connection/BUILD
@@ -13,17 +13,13 @@ envoy_cc_test(
     srcs = ["reverse_connection_cluster_test.cc"],
     copts = select({
         "//bazel:windows_x86_64": [],  # TODO: fix the windows ANTLR build
-        "//conditions:default": [
-            "-DUSE_CEL_PARSER",
-        ],
+        "//conditions:default": [],
     }),
     tags = ["skip_on_windows"],
     deps = [
         "//envoy/registry",
         "//source/common/formatter:formatter_extension_lib",
         "//source/extensions/clusters/reverse_connection:reverse_connection_lib",
-        "//source/extensions/formatter/cel:cel_lib",
-        "//source/extensions/formatter/cel:config",
         "//source/extensions/load_balancing_policies/cluster_provided:config",
         "//test/common/upstream:utility_lib",
         "//test/mocks/network:network_mocks",
@@ -38,12 +34,5 @@ envoy_cc_test(
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/config/cluster/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/clusters/reverse_connection/v3:pkg_cc_proto",
-    ] + select(
-        {
-            "//bazel:windows_x86_64": [],
-            "//conditions:default": [
-                "@com_google_cel_cpp//parser",
-            ],
-        },
-    ),
+    ],
 )
