--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -427,7 +427,8 @@ new_features:
     authorization service.
 - area: ext_authz
   change: |
-    Added :ref:`max_denied_response_body_bytes <envoy_v3_api_field_extensions.filters.http.ext_authz.v3.ExtAuthz.max_denied_response_body_bytes>`
+    Added
+    :ref:`max_denied_response_body_bytes <envoy_v3_api_field_extensions.filters.http.ext_authz.v3.ExtAuthz.max_denied_response_body_bytes>`
     to the ``ext_authz`` HTTP filter. This allows configuring the maximum size of the response body
     returned to the downstream client when a request is denied by the external authorization service.
     If the authorization server returns a response body larger than this limit, it will be truncated.
