--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -112,6 +112,9 @@ minor_behavior_changes:
   change: |
     Check the request header count after applying mutations is <= the configured limit and reject
     the response if not.
+- area: router
+  change: |
+    Take into account connection-level metadata under the ``envoy.lb`` namespace when computing subset load balancing matches.
 
 bug_fixes:
 # *Changes expected to improve the state of the world and are unlikely to have negative effects*
