--- a/test/extensions/filters/http/compressor/BUILD
+++ b/test/extensions/filters/http/compressor/BUILD
@@ -45,12 +45,15 @@ envoy_extension_cc_test(
     extension_names = ["envoy.filters.http.compressor"],
     rbe_pool = "6gig",
     deps = [
+        "//source/extensions/compression/brotli/compressor:config",
+        "//source/extensions/compression/brotli/decompressor:config",
         "//source/extensions/compression/gzip/compressor:config",
         "//source/extensions/compression/gzip/decompressor:config",
         "//source/extensions/filters/http/compressor:config",
         "//test/integration:http_integration_lib",
         "//test/test_common:simulated_time_system_lib",
         "//test/test_common:utility_lib",
+        "@envoy_api//envoy/extensions/compression/brotli/compressor/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/compression/gzip/compressor/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/http/compressor/v3:pkg_cc_proto",
     ],
