http: implement setUpstreamOverrideHost for AsyncClient (#41272)
Add `setUpstreamOverrideHost` method to `AsyncClient::StreamOptions` to
enable applications to bypass load balancer selection and route requests
directly to specific upstream hosts. This supports use cases like
consistent hashing, sticky sessions, and stateful service routing.

Risk Level: Low ?
Testing: unit tests
Docs Changes: No
Release Notes: Yes

Signed-off-by: Johan Haals <johan.haals@gmail.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -544,5 +544,9 @@ new_features:
   change: |
     Added ``max_downstream_connection_duration_jitter_percentage`` to allow adding a jitter to the max downstream connection duration.
     This can be used to avoid thundering herd problems with many clients being disconnected and possibly reconnecting at the same time.
+- area: http
+  change: |
+    Added ``setUpstreamOverrideHost`` method to AsyncClient StreamOptions to enable direct host routing
+    that bypasses load balancer selection.
 
 deprecated:
