tools/cve: Fix empty data dir case (#41313)
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/.bazelrc
+++ b/.bazelrc
@@ -554,6 +554,8 @@ common:remote-envoy-engflow --config=rbe-envoy-engflow
 common:remote-cache-envoy-engflow --config=common-envoy-engflow
 common:remote-cache-envoy-engflow --config=cache-envoy-engflow
 
+common:cves --//tools/dependency:cve-data=//tools/dependency:cve-data-dir
+
 #############################################################################
 # debug: Various Bazel debugging flags
 #############################################################################
