--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -61,6 +61,12 @@ minor_behavior_changes:
     In test code for external extensions, matchers ``Http::HeaderValueOf``, ``HasHeader``, and ``HeaderHasValueRef``
     must be replaced with ``ContainsHeader``.
     Any uses of matcher ``HeaderHasValue(...)`` should be replaced with ``::testing::Pointee(ContainsHeader(...))``.
+- area: thrift
+  change: |
+    :ref:`field_selector<envoy_v3_api_field_extensions.filters.http.thrift_to_metadata.v3.Rule.field_selector>`
+    takes precedence over :ref:`field<envoy_v3_api_field_extensions.filters.http.thrift_to_metadata.v3.Rule.field>`
+    if both set. Not that :ref:`field_selector<envoy_v3_api_field_extensions.filters.http.thrift_to_metadata.v3.Rule.field_selector>`
+    was in wip status.
 - area: generic_proxy
   change: |
     Generic proxy codec adds the same buffer limit as the connection buffer limit. If the buffer limit is
@@ -538,6 +544,10 @@ new_features:
     Envoy to scale the periodic timer for flushing downstream responses based on resource pressure.
     The new timer can be configured via the
     :ref:`ScaleTimersOverloadActionConfig <envoy_v3_api_msg_config.overload.v3.ScaleTimersOverloadActionConfig>`.
+- area: thrift
+  change: |
+    Support :ref:`field_selector<envoy_v3_api_field_extensions.filters.http.thrift_to_metadata.v3.Rule.field_selector>`
+    to extract specified fields in thrift body for thrift_to_metadata http filter.
 - area: dynamic_modules
   change: |
     Added support for counters, gauges, histograms, and their vector variants to the dynamic modules API.
