cluster: reverse connection cluster extension for reusing cached sockets (#40320)
## Description

**Commit Message:** cluster: reverse connection cluster extension for
reusing cached sockets

**Additional Description:** 

This PR implements a reverse connection cluster extension that enables
re-use of cached reverse connection sockets when a request arrives on
upstream envoy, to be sent to downstream envoy over an already
established connection.

[Github Issue](https://github.com/envoyproxy/envoy/issues/33320)

This PR is dependent on the [upstream reverse connection socket
interface](https://github.com/envoyproxy/envoy/pull/40315).

### Architecture Overview

The reverse connection cluster (`RevConCluster`) is designed to work
with the upstream reverse connection socket interface, providing dynamic
host creation and management for downstream reverse connection nodes.

### Key Components

#### 1. **RevConCluster Class**
- When a request comes in, this creates and manages hosts based on
downstream request context. the cluster re-uses the hosts when
subsequent requests arrive for the same downstream node, allowing
multiple requests to be multiplexed as new (HTTP/2) streams on the same
reverse connection.
- Stale hosts that are no longer in use are cleaned up.

[Life of a
Request](https://lucid.app/lucidchart/c369b0df-436b-4dbb-b32b-03d2412c1db2/edit?invitationId=inv_1aa0e150-484c-4b43-9799-afb3d61289e1&page=IjcZ1O4Q5TdRF#)

#### 2. **Custom Address Implementation
(`UpstreamReverseConnectionAddress`)**
- **Socket Interface Selection**: Overrides `socketInterface()` to use
the `ReverseTunnelAcceptor` for upstream connections
- This allows for the ReverseTunnelAcceptor's socket() method to be
called by the dispatcher when attempting to initiate connections to the
requested node, thereby picking a cached socket

#### 3. **Load Balancer Implementation**
- **Host Selection Strategy**: When a request comes in , multi-layered
host identification is implemented for determining

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -87,6 +87,8 @@ extensions/filters/common/original_src @klarose @mattklein123
 /*/extensions/udp_packet_writer/ @danzh2010 @ryantheoptimist
 # redis cluster extension
 /*/extensions/clusters/redis @msukalski @henryyyang @mattklein123
+# reverse conn cluster extension
+/*/extensions/clusters/reverse_connection @agrawroh @basundhara-c @botengyao @yanavlasov
 /*/extensions/common/redis @msukalski @henryyyang @mattklein123
 /*/extensions/health_checkers/redis @mattklein123 @UNOWNED
 /*/extensions/filters/network/redis_proxy @mattklein123 @UNOWNED
