--- a/configs/reverse_connection/initiator-envoy.yaml
+++ b/configs/reverse_connection/initiator-envoy.yaml
@@ -80,7 +80,11 @@ static_resources:
                 port_value: 80
 
 admin:
-  access_log_path: "/dev/stdout"
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: "/dev/stdout"
   address:
     socket_address:
       protocol: TCP
