--- a/configs/reverse_connection/responder-envoy.yaml
+++ b/configs/reverse_connection/responder-envoy.yaml
@@ -112,7 +112,11 @@ static_resources:
           http2_protocol_options: {}
 
 admin:
-  access_log_path: "/dev/stdout"
+  access_log:
+  - name: envoy.access_loggers.file
+    typed_config:
+      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
+      path: "/dev/stdout"
   address:
     socket_address:
       address: 0.0.0.0
