--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -577,5 +577,13 @@ new_features:
     Added :ref:`outlier_detection<envoy_v3_api_field_extensions.upstreams.http.v3.HttpProtocolOptions.outlier_detection>`
     to cluster's http protocol options to allow defining via an http matcher whether a response should be treated
     as error or as success by outlier detection.
+- area: compressor
+  change: |
+    Added (:ref:`status_header_enabled
+    <envoy_v3_api_field_extensions.filters.http.compressor.v3.Compressor.ResponseDirectionConfig.status_header_enabled>`)
+    to Compressor Filter. When enabled it adds new response header x-envoy-compression-status to the compressor_filter.
+    This header provides information on whether the response was compressed and, if not, the reason why compression was skipped.
+    Enabling this feature alters the order of conditions checked within the compressor filter is altered
+    to emit the most appropriate status reason.
 
 deprecated:
