Add statistics section to reverse tunnel docs
Signed-off-by: Basundhara Chakrabarty <basundhara.c@nutanix.com>

--- a/configs/reverse_tunnel/responder-envoy.yaml
+++ b/configs/reverse_tunnel/responder-envoy.yaml
@@ -10,6 +10,7 @@ bootstrap_extensions:
     "@type": >-
       type.googleapis.com/envoy.extensions.bootstrap.reverse_tunnel.upstream_socket_interface.v3.UpstreamReverseConnectionSocketInterface
     stat_prefix: "upstream_reverse_connection"
+    enable_detailed_stats: true
 
 static_resources:
   listeners:
