--- a/configs/reverse_tunnel/initiator-envoy.yaml
+++ b/configs/reverse_tunnel/initiator-envoy.yaml
@@ -10,6 +10,7 @@ bootstrap_extensions:
     "@type": >-
       type.googleapis.com/envoy.extensions.bootstrap.reverse_tunnel.downstream_socket_interface.v3.DownstreamReverseConnectionSocketInterface
     stat_prefix: "downstream_reverse_connection"
+    enable_detailed_stats: true
 
 static_resources:
   listeners:
